tests/functional/lang/eval-fail-readFileType-toString-non-absolute.err.exp
error:
       … while calling the 'readFileType' builtin
         at /pwd/lang/eval-fail-readFileType-toString-non-absolute.nix:1:1:
            1| builtins.readFileType { __toString = self: "not-absolute"; }
             | ^
            2|

       … while evaluating the result of the `__toString` attribute
         at /pwd/lang/eval-fail-readFileType-toString-non-absolute.nix:1:25:
            1| builtins.readFileType { __toString = self: "not-absolute"; }
             |                         ^
            2|

       … while realising the context of a path

       error: string 'not-absolute' doesn't represent an absolute path
